# mlops_project

./: pyproject.toml
config/model/: less_basic_nn.yaml
data/: .gitignore  test_m4gt.pkl.dvc  train_m4gt.pkl.dvc  valid_m4gt.pkl.dvc
mlops-project/: __init__.py
mlops_project/mlcore/: dataset.py  model.py  trainer.py
text_classification/: pyproject.toml
text_classification/text_classification/: __init__.py
