[project]
name = "text-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ruanwko", email = "artem.borisov@raiffeisen.ru" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
text-classification = "text_classification:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
